--- a/StopWatch/Base.lproj/Main.storyboard
+++ b/StopWatch/Base.lproj/Main.storyboard
@@ -1,79 +1,83 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="StopWatch" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
-                    </layoutGuides>
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="Timeris" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L4O-z1-yAx">
-                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
-                                <color key="barTintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                <items>
-                                    <navigationItem title="Stopwatch" id="iaj-gr-e89"/>
-                                </items>
-                            </navigationBar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:05.88" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UZn-7Q-eIG">
-                                <rect key="frame" x="0.0" y="64" width="320" height="84"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="72"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="mFt-lF-8YR">
-                                <rect key="frame" x="0.0" y="242" width="320" height="326"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="22" sectionFooterHeight="22" id="mFt-lF-8YR">
+                                <rect key="frame" x="0.0" y="109" width="320" height="360.0000030487775"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.14901960784313725" green="0.19607843137254902" blue="0.28235294117647058" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="60" id="fVK-e0-j14">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fVK-e0-j14" id="O13-wA-w1g">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1002" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="lap Details" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="bCL-2a-nrD">
+                                                    <rect key="frame" x="219" y="19" width="93" height="23"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1001" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="lap Count" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wtq-wy-j5A">
+                                                    <rect key="frame" x="8" y="19" width="85" height="23"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="0.59607843137254901" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="vXZ-lx-hvc" id="dEA-wG-w5t"/>
                                     <outlet property="delegate" destination="vXZ-lx-hvc" id="R5G-Ns-hvF"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ebW-Hx-b4a">
-                                <rect key="frame" x="61" y="162" width="72" height="72"/>
-                                <state key="normal" image="start.png">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="startStopButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="P1P-d4-YQa"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HqI-uU-MqA">
-                                <rect key="frame" x="187" y="162" width="72" height="72"/>
-                                <state key="normal" image="lap.png">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="HqI-uU-MqA">
+                                <rect key="frame" x="207" y="481" width="72" height="72"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                                <state key="normal" image="Stop.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="lapResetButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="idE-eM-CB9"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:05.88" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="UZn-7Q-eIG">
+                                <rect key="frame" x="0.0" y="17" width="320" height="84"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.14901960784313725" green="0.19607843137254902" blue="0.28235294117647058" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="72"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="ebW-Hx-b4a">
+                                <rect key="frame" x="39" y="481" width="72" height="72"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <color key="tintColor" red="0.62745098039215685" green="0.62745098039215685" blue="0.77175093927373584" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" image="Start.png">
+                                    <color key="titleColor" red="0.62745098039215685" green="0.62745098039215685" blue="0.85456928453947367" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="startStopButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="P1P-d4-YQa"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="L4O-z1-yAx" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="418-WG-yHe"/>
-                            <constraint firstItem="HqI-uU-MqA" firstAttribute="top" secondItem="UZn-7Q-eIG" secondAttribute="bottom" constant="14" id="6bj-i5-TDU"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="mFt-lF-8YR" secondAttribute="bottom" id="BOb-eg-Dz8"/>
-                            <constraint firstItem="UZn-7Q-eIG" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="BXR-xM-Oqn"/>
-                            <constraint firstAttribute="trailing" secondItem="UZn-7Q-eIG" secondAttribute="trailing" id="Kxl-gH-MJW"/>
-                            <constraint firstItem="mFt-lF-8YR" firstAttribute="top" secondItem="ebW-Hx-b4a" secondAttribute="bottom" constant="8" id="Q0r-Vy-hXS"/>
-                            <constraint firstAttribute="centerX" secondItem="HqI-uU-MqA" secondAttribute="centerX" constant="-63" id="aUA-nJ-FUT"/>
-                            <constraint firstItem="L4O-z1-yAx" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="b0f-gh-vz2"/>
-                            <constraint firstAttribute="centerX" secondItem="ebW-Hx-b4a" secondAttribute="centerX" constant="63" id="fGE-9W-N5C"/>
-                            <constraint firstAttribute="trailing" secondItem="mFt-lF-8YR" secondAttribute="trailing" id="gDO-In-Lio"/>
-                            <constraint firstItem="ebW-Hx-b4a" firstAttribute="top" secondItem="UZn-7Q-eIG" secondAttribute="bottom" constant="14" id="jKM-dt-yan"/>
-                            <constraint firstItem="mFt-lF-8YR" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="tIk-fc-xE1"/>
-                            <constraint firstAttribute="trailing" secondItem="L4O-z1-yAx" secondAttribute="trailing" id="xHz-qR-qgx"/>
-                            <constraint firstItem="UZn-7Q-eIG" firstAttribute="top" secondItem="L4O-z1-yAx" secondAttribute="bottom" id="zaK-8d-Rah"/>
-                        </constraints>
+                        <color key="backgroundColor" red="0.14901960784313725" green="0.19607843137254902" blue="0.28235294117647058" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <connections>
                         <outlet property="lapResetButton" destination="HqI-uU-MqA" id="K4n-NW-MLr"/>
@@ -88,8 +92,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="lap.png" width="72" height="72"/>
-        <image name="start.png" width="72" height="72"/>
+        <image name="Start.png" width="100" height="100"/>
+        <image name="Stop.png" width="100" height="100"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
